--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.neovisionaries:nv-websocket-client:2.9' // web socket client
+    implementation "com.leinardi.android:speed-dial:3.1.1" // fab
 }
