--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,21 @@
                         android:name="android.support.PARENT_ACTIVITY"
                         android:value=".calendar.activity.CalendarSelectionActivity" />
                 </activity>
+        <activity android:name=".settings.activity.SettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".home.activity.HomeActivity" />
+        </activity>
+        <activity android:name=".settings.activity.AccountSettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".settings.activity.SettingsActivity" />
+        </activity>
+        <activity android:name=".settings.activity.AlertSettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".settings.activity.SettingsActivity" />
+        </activity>
     </application>
 
 </manifest>
