--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="false"
@@ -69,21 +69,25 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".home.activity.HomeActivity" />
         </activity>
-                <activity android:name=".calendar.activity.CalendarSelectionActivity">
-                    <meta-data
-                        android:name="android.support.PARENT_ACTIVITY"
-                        android:value=".home.activity.HomeActivity" />
-                </activity>
-                <activity android:name=".calendar.activity.RecordActivity">
-                    <meta-data
-                        android:name="android.support.PARENT_ACTIVITY"
-                        android:value=".calendar.activity.CalendarSelectionActivity" />
-                </activity>
-                <activity android:name=".calendar.activity.WeightChartActivity">
-                    <meta-data
-                        android:name="android.support.PARENT_ACTIVITY"
-                        android:value=".calendar.activity.CalendarSelectionActivity" />
-                </activity>
+        <activity android:name=".calendar.activity.CalendarSelectionActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".home.activity.HomeActivity" />
+        </activity>
+        <activity android:name=".calendar.activity.RecordActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".calendar.activity.CalendarSelectionActivity" />
+        </activity>
+        <activity android:name=".calendar.activity.WeightChartActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".calendar.activity.CalendarSelectionActivity" />
+        </activity>
+        <activity android:name=".Map.MapActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".home.activity.HomeActivity" />
+        </activity>
     </application>
-
 </manifest>
